# Habits

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run.sh
src/habits/: backup.py  charts.py  config.py  db.py  main.py  models.py  palette.py  paths.py  stats.py
src/habits/ui/: __init__.py  icons.py  labels.py  menu.py  panels.py  welcome.py
tests/: __init__.py  conftest.py  test_backup.py  test_cli.py  test_config.py  test_labels.py  test_models.py  test_palette.py  test_stats.py
