[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habits"
version = "0.1.0"
description = "A personal habit tracker for the terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7",
]

[project.scripts]
habits = "habits.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
